Fix on overflow

--- a/_projects/wedding/css/modules/landing-heading.scss
+++ b/_projects/wedding/css/modules/landing-heading.scss
@@ -1,3 +1,9 @@
+.has-landing-heading {
+	inner-column {
+		overflow-x: hidden;
+	}
+}
+
 landing-heading {
 	display: grid;
 	width: 100%;
