--- a/_projects/wedding/css/style.css
+++ b/_projects/wedding/css/style.css
@@ -844,6 +844,10 @@ header.open-menu .burger-inner .bottom-bun {
   background-color: var(--white-soft);
 }
 
+.has-landing-heading inner-column {
+  overflow-x: hidden;
+}
+
 landing-heading {
   display: grid;
   width: 100%;
